--- a/.gitignore
+++ b/.gitignore
@@ -109,12 +109,6 @@ Temporary Items
 !.vscode/launch.json
 !.vscode/extensions.json
 
-### IntelliJ ###
-
-*.iml
-*.ipr
-*.iws
-
 ### Windows ###
 # Windows thumbnail cache files
 Thumbs.db
@@ -161,6 +155,7 @@ gradle-app.setting
 .project
 .settings/
 bin/
+imgui.ini
 
 
 # End of https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
